--- a/index.html
+++ b/index.html
@@ -1,73 +1,73 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     nav {
-  border: 4px solid blue;
-  border-bottom-left-radius: 5px;
-  border-bottom-right-radius: 5px;
-  display: flex;
-  background-color: blue;
-  height: 40px;
-  width: 390px;
-  position: absolute;
-  z-index: 100%;
-}
-.header {
-  font-size: 20px;
-  position: relative;
-  bottom: 11px;
-  color: white;
-  left: 10px;
-  font-weight: bold;
-}
-.admin{
-  position: relative;
-  top: 10px;
-  left: 100px;
-  color: blue;
-  background-color: white;
-  height: 20px;
-  padding: 3px;
-  border-radius: 50px;
-  padding-left: 3px;
-  width: 90px;
-  text-align: center;
-}
-img {
-  margin-top: 20px;
-}
-button {
-  margin-top: 30px;
-  color: white;
-  background-color: blue;
-  font-size: 17px;
-  padding: 5px 4px;
-  border-radius: 15px;
-}
-
-
+      border: 4px solid blue;
+      border-bottom-left-radius: 5px;
+      border-bottom-right-radius: 5px;
+      display: flex;
+      background-color: blue;
+      height: 40px;
+      width: 390px;
+      position: absolute;
+      z-index: 100%;
+    }
+    .header {
+      font-size: 20px;
+      position: relative;
+      bottom: 11px;
+      color: white;
+      left: 10px;
+      font-weight: bold;
+    }
+    .admin {
+      position: relative;
+      top: 10px;
+      left: 100px;
+      color: blue;
+      background-color: white;
+      height: 20px;
+      padding: 3px;
+      border-radius: 50px;
+      padding-left: 3px;
+      width: 90px;
+      text-align: center;
+    }
+    img {
+      margin-top: 20px;
+    }
+    button {
+      margin-top: 30px;
+      color: white;
+      background-color: blue;
+      font-size: 17px;
+      padding: 5px 4px;
+      border-radius: 15px;
+    }
   </style>
   <title>Document</title>
 </head>
 <body>
   <nav class="head">
-    <h3 class="header"> @Trade-Station</h3>
-    <a href="withdrawal.html" class="admin">Chat Admin</a>
-   </nav>
+    <h3 class="header">@Trade-Station</h3>
+    <a href="withdrawal.html" class="admin">Administrador de Chat</a>
+  </nav>
   <div>
-   <center> <img src=".//bank.jpg" alt="" width="200px">
-    <h3>Enter amounnt here</h3>
-    <input type="text" name="dollar" id="$" placeholder="Put the amount here $300">
-    <h3>Enter acoount details</h3>
-    <input type="text" name="" id="" > </center>
-    <center><button onclick="myfunction()">withdraw Now</button></center>
+    <center>
+      <img src=".//bank.jpg" alt="" width="200px">
+      <h3>Ingrese la cantidad aquí</h3>
+      <input type="text" name="dollar" id="$" placeholder="Ingrese la cantidad aquí $300">
+      <h3>Ingrese los detalles de la cuenta</h3>
+      <input type="text" name="" id="">
+    </center>
+    <center><button onclick="myfunction()">Retirar ahora</button></center>
   </div>
   <script>
-    function myfunction () {
-      window.location.href="popup3.html"
+    function myfunction() {
+      window.location.href = "popup3.html";
     }
   </script>
 </body>
