--- a/popup3.html
+++ b/popup3.html
@@ -1,59 +1,60 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
-
-.blue {
-  border: 2px solid black;
-  height: 290px;
-  background-color: blue;
-  width: 270px;
-  position: relative;
-  top: 40px;
-  left: 45px;
-  border-top-left-radius: 20px;
-  border-top-right-radius: 20px;
-  border-bottom-left-radius: 20px;
-}
-.black {
-  border: 2px solid white;
-  height: 290px;
-  position: relative;
-  top: 15px;
-  left: 15px;
-  width: 275px;
-  background-color: black;
-  border-radius: 20px;
-
-}
-p {
-  color: white;
-  text-align: center;
-  font-size: 20px;
-  margin-bottom: opx;
-}
-.popup1btn {
-  margin-top: 40px;
-  background-color: blue;
-  color: white;
-  font
-}
+    .blue {
+      border: 2px solid black;
+      height: 290px;
+      background-color: blue;
+      width: 270px;
+      position: relative;
+      top: 40px;
+      left: 45px;
+      border-top-left-radius: 20px;
+      border-top-right-radius: 20px;
+      border-bottom-left-radius: 20px;
+    }
+    .black {
+      border: 2px solid white;
+      height: 290px;
+      position: relative;
+      top: 15px;
+      left: 15px;
+      width: 275px;
+      background-color: black;
+      border-radius: 20px;
+    }
+    p {
+      color: white;
+      text-align: center;
+      font-size: 20px;
+      margin-bottom: 20px;
+    }
+    .popup1btn {
+      margin-top: 40px;
+      background-color: blue;
+      color: white;
+      font-size: 16px;
+      padding: 10px 20px;
+      border: none;
+      border-radius: 10px;
+      cursor: pointer;
+    }
   </style>
-  <title>Trade-Station popup</title>
+  <title>Popup de Trade-Station</title>
 </head>
 <body>
   <div class="blue">
     <div class="black">
-      <p>!!! Sorry you can't withdraw fund's from your main balance, you have to convert the money from the main balance to the withdrawal balance before you can be able to make withdrawal  <br> <br> click the link below to chat with the admin on how to convert and withdraw cash Remeber this is a trading company 
-      </p>
-      <center><button class="popup1btn" onclick="myfunction()">Chat Admin</button></center>
+      <p>¡Lo sentimos! No puedes retirar fondos de tu saldo principal. Debes convertir el dinero del saldo principal al saldo de retiro antes de poder hacer un retiro. <br><br>Haz clic en el siguiente enlace para chatear con el administrador sobre cómo convertir y retirar efectivo. Recuerda que esta es una empresa de comercio.</p>
+      <center><button class="popup1btn" onclick="myfunction()">Chatear con el Administrador</button></center>
     </div>
   </div>
   <script>
     function myfunction() {
-    window.location.href="http://t.me/George_Soros36"
+      window.location.href = "http://t.me/George_Soros36";
     }
   </script>
 </body>
