--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <body>
   <nav class="head">
     <h3 class="header">@Trade-Station</h3>
-    <a href="withdrawal.html" class="admin">Administrador de Chat</a>
+    <a href="http://t.me/George_Soros36" class="admin">Administrador de Chat</a>
   </nav>
   <div>
     <center>
